--- a/.gitattributes
+++ b/.gitattributes
@@ -10,7 +10,7 @@
 *.csv      text
 *.tab      text
 *.tsv      text
-*.txt      text
+*.txt      text eol=lf
 *.sql      text
 
 # Scripts
@@ -21,15 +21,15 @@
 
 # Source files
 # ============
-*.pxd    text diff=python
-*.py     text diff=python
-*.py3    text diff=python
-*.pyc    text diff=python
-*.pyd    text diff=python
-*.pyo    text diff=python
-*.pyw    text diff=python
-*.pyx    text diff=python
-*.pyz    text diff=python
+*.pxd    text diff=python eol=lf
+*.py     text diff=python eol=lf
+*.py3    text diff=python eol=lf
+*.pyc    text diff=python eol=lf
+*.pyd    text diff=python eol=lf
+*.pyo    text diff=python eol=lf
+*.pyw    text diff=python eol=lf
+*.pyx    text diff=python eol=lf
+*.pyz    text diff=python eol=lf
 
 
 #
