feat: configure redis socket via variable

--- a/etc/nginx/common/wpfc.conf
+++ b/etc/nginx/common/wpfc.conf
@@ -1,4 +1,4 @@
-# WPFC NGINX CONFIGURATION - WordOps {{release}}
+# WPFC NGINX CONFIGURATION - WordOps 3.22.0
 # DO NOT MODIFY, ALL CHANGES WILL BE LOST AFTER AN WordOps (wo) UPDATE
 # $skip_cache variable set in /etc/nginx/conf.d/map-wp.conf
 
