--- a/etc/nginx/common/php.conf
+++ b/etc/nginx/common/php.conf
@@ -1,4 +1,4 @@
-# PHP NGINX CONFIGURATION - WordOps {{release}}
+# PHP NGINX CONFIGURATION - WordOps 3.22.0
 # DO NOT MODIFY, ALL CHANGES WILL BE LOST AFTER AN WordOps (wo) UPDATE
 location / {
   try_files $uri $uri/ /index.php$is_args$args;
