--- a/etc/nginx/common/wp.conf
+++ b/etc/nginx/common/wp.conf
@@ -1,4 +1,4 @@
-# WordPress COMMON SETTINGS - WordOps {{release}}
+# WordPress COMMON SETTINGS - WordOps 3.22.0
 # DO NOT MODIFY, ALL CHANGES WILL BE LOST AFTER AN WordOps (wo) UPDATE
 # Limit access to avoid brute force attack
 location = /wp-login.php {
