--- a/etc/nginx/common/wprocket.conf
+++ b/etc/nginx/common/wprocket.conf
@@ -1,4 +1,4 @@
-# WPROCKET NGINX CONFIGURATION - WordOps {{release}}
+# WPROCKET NGINX CONFIGURATION - WordOps 3.22.0
 # DO NOT MODIFY, ALL CHANGES WILL BE LOST AFTER AN WordOps (wo) UPDATE
 # $cache_uri variable set in /etc/nginx/conf.d/map-wp.conf
 # Use cached or actual file if they exists, Otherwise pass request to WordPress
