--- a/etc/nginx/common/wpsc.conf
+++ b/etc/nginx/common/wpsc.conf
@@ -1,4 +1,4 @@
-# WPSC NGINX CONFIGURATION - WordOps {{release}}
+# WPSC NGINX CONFIGURATION - WordOps 3.22.0
 # DO NOT MODIFY, ALL CHANGES WILL BE LOST AFTER AN WordOps (wo) UPDATE
 # $cache_uri variable set in /etc/nginx/conf.d/map-wp.conf
 
