--- a/config/plugins.d/secure.conf
+++ b/config/plugins.d/secure.conf
@@ -1,8 +1,9 @@
 ### Example Plugin Configuration for WordOps
 
-[secure]
+[secure_ssh]
 
 ### If enabled, load a plugin named `example` either from the Python module
 ### `wo.cli.plugins.example` or from the file path
 ### `/var/lib/wo/plugins/example.py`
 enable_plugin = true
+module = wo.cli.plugins.secure_ssh
